[project]
name = "ft-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "pydantic>=2.12.5",
    "pypdf>=6.9.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
]
